--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "dist:rd3g": "rm -rf dist/ && webpack --config webpack.config.dist.js -p --display-modules --optimize-minimize",
         "dist:sandbox": "webpack --config webpack.config.js -p",
         "dist:transpile": "./node_modules/babel-cli/bin/babel.js -d lib src",
-        "dist": "npm run check && node_modules/.bin/npm-run-all --parallel dist:*",
+        "dist": "npm run check && npm-run-all --parallel dist:*",
         "docs:lint": "node_modules/documentation/bin/documentation.js lint src/**/*.js",
         "docs:watch": "node_modules/documentation/bin/documentation.js --config documentation.yml build src/**/*.js -f html -o gen-docs --watch",
         "docs": "npm run docs:lint && node_modules/documentation/bin/documentation.js --config documentation.yml build src/**/*.js -f html -o gen-docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > gen-docs/DOCUMENTATION.md",
@@ -82,9 +82,10 @@
         "react-test-renderer": "16.4.1",
         "style-loader": "0.18.2",
         "typescript": "^3.2.2",
-        "webpack": "4.2.0",
-        "webpack-cli": "2.0.12",
-        "webpack-dev-server": "3.1.3",
+        "webpack": "4.28.1",
+        "webpack-bundle-analyzer": "^3.0.3",
+        "webpack-cli": "^2.0.12",
+        "webpack-dev-server": "3.1.11",
         "webpack-visualizer-plugin": "0.1.11"
     },
     "engines": {
