--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
         "query-string": "6.1.0",
         "react": "^16.4.1",
         "react-addons-test-utils": "15.6.2",
-        "react-dom": "16.4.1",
+        "react-dom": "^16.4.2",
         "react-editable-json-tree": "2.2.1",
         "react-jsonschema-form": "1.0.4",
         "react-test-renderer": "16.4.1",
@@ -83,7 +83,7 @@
         "webpack": "4.28.1",
         "webpack-bundle-analyzer": "^3.0.3",
         "webpack-cli": "2.0.12",
-        "webpack-dev-server": "3.1.3",
+        "webpack-dev-server": "^3.1.14",
         "webpack-visualizer-plugin": "0.1.11"
     },
     "engines": {
