add prepare script so npm can install from github

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-d3-graph",
-    "version": "2.0.0-rc2",
+    "version": "2.0.0-rc3",
     "description": "React component to build interactive and configurable graphs with d3 effortlessly",
     "author": "Daniel Caldas",
     "license": "MIT",
@@ -22,6 +22,7 @@
         "lint:test": "node_modules/eslint/bin/eslint.js --config=.eslintrc.test.config.js \"test/**/*.spec.js\"",
         "lint": "npm run lint:src && npm run lint:test && npm run docs:lint",
         "precommit": "lint-staged",
+        "prepare": "npm run dist:transpile",
         "start": "http-server ./sandbox/ -p 8888 -c-1",
         "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage --config jest.config.js",
         "test:watch": "jest --verbose --coverage --watchAll --config jest.config.js",
