--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "babel-plugin-add-module-exports": "0.2.1",
         "babel-plugin-react-html-attrs": "2.0.0",
         "babel-plugin-transform-class-properties": "6.24.1",
+        "babel-plugin-transform-object-rest-spread": "6.26.0",
         "babel-polyfill": "6.26.0",
         "babel-preset-es2015": "6.24.1",
         "babel-preset-react": "6.24.1",
